test/corpus/fail/issue167.mo
=========
issue167.mo
=========

type F<A> = A<Int>;

---

(source_file
  (typ_dec
    (type_identifier)
    (typ_params
      (typ_bind
        (type_identifier)))
    (path_typ
      (typ_path
        (type_identifier))
      (path_typ
        (typ_path
          (type_identifier))))))
